--- a/views/contactUs.ejs
+++ b/views/contactUs.ejs
@@ -9,7 +9,7 @@
 
      <!-- Favicon -->
      <link rel="icon" type="image/x-icon" href="../Images/favicon.png">
-
+     <link rel="stylesheet" href="/css/contactUs.css">
      <!-- font awesome cdn link  -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="/css/contactUS.css">
+    
   
 </head>
 
